Last fixes done.

--- a/HouHavn.Web/appsettings.json
+++ b/HouHavn.Web/appsettings.json
@@ -1,4 +1,6 @@
 {
+  //"ConnectionString": "Server=(localdb)\\mssqllocaldb;Database='HouHavntest';Trusted_Connection=True;",
+  "ConnectionString": "Server=DESKTOP-4671Q2B\\SQLEXPRESS;Database='HouHavn';Trusted_Connection=True;",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
